syntax = "proto3";

option csharp_namespace = "GrpcService1.Protos";

service TurnByTurn {
	rpc StartGuaidance(GuidanceRequest) returns(stream Step);
}

message GuidanceRequest {
	string address = 1;
}

message Step {
	string road = 1;
	string direction = 2;
}